# nml

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  justfile
.github/: dependabot.yml
.github/workflows/: ci.yml  extension-build.yml  release.yml  rust-ci.yml
crates/nml-core/: Cargo.toml
crates/nml-core/src/: ast.rs  de.rs  defaults.rs  diff.rs  error.rs  identity.rs  lexer.rs  lib.rs  model.rs  model_extract.rs  money.rs  parser.rs  project.rs  query.rs  resolve.rs  resolver.rs  schema.rs  schema_index.rs  span.rs  symbols.rs  template.rs  types.rs
crates/nml-core/src/cst/: ast.rs  edit.rs  extract.rs  lexer.rs  lower.rs  mod.rs  parser.rs  syntax.rs  value.rs
crates/nml-fmt/: Cargo.toml
crates/nml-fmt/src/: formatter.rs
crates/nml-lsp/: Cargo.toml
crates/nml-lsp/src/: diagnostics.rs  lib.rs  main.rs  packages.rs  position.rs  server.rs
crates/nml-lsp/tests/: harness.rs
crates/nml-validate/: Cargo.toml
crates/nml-validate/assets/: package.model.nml
crates/nml-validate/src/: constraints.rs  diagnostics.rs  glob.rs  lib.rs  loader.rs  package.rs  schema.rs  store.rs  test_support.rs
docs/: integration.md  language-guide.md
editors/vscode/: .gitignore  .vscode-test.mjs  .vscodeignore  INSTALL.md  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  serverAcquisition.ts
editors/vscode/src/test/: README.md  extension.test.ts  multiroot.test.ts  util.ts
editors/vscode/src/test/fixtures/: multi.code-workspace
editors/vscode/src/test/fixtures/multi-b/: app.nml
editors/vscode/src/test/fixtures/ws/: core.model.nml
editors/vscode/syntaxes/: nml.tmLanguage.json
editors/vscode/walkthroughs/: open.md  provider.md  server.md
hooks/: pre-commit
nml-cli/: Cargo.toml
nml-cli/examples/: parse_config.rs  serde_deserialize.rs  validate_schema.rs
nml-cli/src/: main.rs
spec/: README.md  access-control.md  models.md  syntax.md  types.md
spec/examples/: pricing.nml  role-templates.nml  service.model.nml  service.nml  web-server.nml
tests/fixtures/invalid/: bad-money-precision.nml  duplicate-role.nml  missing-required-field.nml  unknown-currency.nml  unresolved-reference.nml
tests/fixtures/schema-check/: widget-missing-name.nml  widget-ok.nml
tests/fixtures/schema-check/dup-schema/: a.model.nml  b.model.nml
tests/fixtures/schema-check/schema/: widgets.schema.nml
tests/fixtures/valid/: full-service.nml  minimal-service.nml  money-values.nml  pricing.nml  role-templates.nml  scalar-shared-property.nml  secret-values.nml  web-server.nml
tests/fixtures/valid/models/: core.model.nml  pricing.model.nml
tests/integration/: cli_tests.rs
