[package]
name = "nml-cli"
description = "Command-line interface for the NML configuration language"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nml"
path = "src/main.rs"

[dependencies]
nml-core = { workspace = true }
nml-validate = { workspace = true }
nml-fmt = { workspace = true }
serde_json = { workspace = true }

[[test]]
name = "cli_tests"
path = "../tests/integration/cli_tests.rs"
