[package]
name = "nml-core"
description = "Core parsing and AST library for the NML configuration language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
