[package]
name = "nml-fmt"
description = "Canonical formatter for the NML configuration language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
nml-core = { workspace = true }
