[package]
name = "nml-lsp"
description = "Language Server Protocol implementation for NML"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "nml_lsp"
path = "src/lib.rs"

[[bin]]
name = "nml-lsp"
path = "src/main.rs"

[dependencies]
# Parses via the RFC 0004 CST: resilience (validation works mid-edit), all-errors
# diagnostics, exact spans, and comment attachment for hover-on-comment.
nml-core = { workspace = true }
nml-validate = { workspace = true }
nml-fmt = { workspace = true }
serde_json = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
