[package]
name = "nml-lsp"
description = "Language Server Protocol implementation for NML"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "nml_lsp"
path = "src/lib.rs"

[[bin]]
name = "nml-lsp"
path = "src/main.rs"

[dependencies]
# Parses via the RFC 0004 CST: resilience (validation works mid-edit), all-errors
# diagnostics, exact spans, and comment attachment for hover-on-comment.
nml-core = { workspace = true }
nml-validate = { workspace = true }
nml-fmt = { workspace = true }
serde_json = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
nml-validate = { workspace = true, features = ["test-support"] }
# In-process duplex harness (tests/harness.rs): `tower` drives the LspService
# as a plain `tower::Service` (`service.ready().await.call(..)`), `futures`
# drains the ClientSocket stream and answers server->client requests via its
# Sink half. Both are already in the tree as tower-lsp dependencies (same
# versions), so this adds no new compiles to a full build.
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
