[package]
name = "nml-lsp"
description = "Language Server Protocol implementation for NML"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[lib]
name = "nml_lsp"
path = "src/lib.rs"

[[bin]]
name = "nml-lsp"
path = "src/main.rs"

[dependencies]
# Parses via the RFC 0004 CST: resilience (validation works mid-edit), all-errors
# diagnostics, exact spans, and comment attachment for hover-on-comment.
nml-core = { workspace = true }
nml-validate = { workspace = true }
nml-fmt = { workspace = true }
serde_json = { workspace = true }
tower-lsp = { workspace = true }
# Canonicalize WITHOUT the Windows `\\?\` verbatim prefix: `std::fs::canonicalize`
# yields verbatim paths on Windows, which `Url::from_file_path` mishandles — and
# the server round-trips canonicalized paths through URIs (doc lookup, roots).
# `dunce` is byte-for-byte `std` on non-Windows, so it changes nothing on
# Unix/WASM and fixes URI matching on Windows.
dunce = "1"

# tokio's feature surface is target-split (RFC 0035 WASM delivery). Native gets
# the workspace's full tokio. `wasm32` (the in-editor neutral server, run under
# VS Code's `wasm-wasi-core`) gets ONLY the wasm-supported subset — `net`/`fs`/
# multi-thread pull in `mio`, which does not build on wasm. The runtime shell
# uses exactly this subset; the stdio transport is target-split in `serve`.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", default-features = false, features = [
    "rt",
    "macros",
    "sync",
    "time",
] }
# The wasm synchronous pump (`lib::wasm_pump`) drives the `LspService` directly:
# `tower` for the Service/ready/call surface, `futures` for stream draining, and
# `serde` for framing the JSON-RPC wire. (Native drives via tower-lsp's own
# `Server::serve`, so these are wasm-only.)
tower = { version = "0.4", default-features = false, features = ["util"] }
futures = { version = "0.3", default-features = false }
serde = "1"

[dev-dependencies]
nml-validate = { workspace = true, features = ["test-support"] }
# In-process duplex harness (tests/harness.rs): `tower` drives the LspService
# as a plain `tower::Service` (`service.ready().await.call(..)`), `futures`
# drains the ClientSocket stream and answers server->client requests via its
# Sink half. Both are already in the tree as tower-lsp dependencies (same
# versions), so this adds no new compiles to a full build.
futures = "0.3"
tower = { version = "0.4", features = ["util"] }
