[package]
name = "nml-validate"
description = "Schema validation layer for the NML configuration language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
# Schema extraction runs over the RFC 0004 CST (`cst::extract_schema`); the
# inheritance/cycle passes operate on the resulting `ExtractedSchema` data.
nml-core = { workspace = true }

[dev-dependencies]
# Only the validator/`de` agreement test deserializes through `nml-core::de`.
serde = { workspace = true }
