[package]
name = "nml-validate"
description = "Schema validation layer for the NML configuration language"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme = "../../README.md"

[dependencies]
# Schema extraction runs over the RFC 0004 CST (`cst::extract_schema`); the
# inheritance/cycle passes operate on the resulting `ExtractedSchema` data.
nml-core = { workspace = true }
# Content-addressed package identity (RFC 0030): the store, pins, and parity
# checks compare blake3 hashes of the framed manifest+sources byte stream.
blake3 = "1"
# Locates the per-user schema-package store (XDG / Application Support).
dirs = "6"

[features]
# Shared test fixtures (demo package manifest/sources, publish helpers) for
# downstream crates' test suites. Never enabled in production builds.
test-support = []

[dev-dependencies]
# Only the validator/`de` agreement test deserializes through `nml-core::de`.
serde = { workspace = true }
# Cross-platform mtime setting for the GC aging tests: `std` cannot open a
# directory handle to retime it on Windows (needs FILE_FLAG_BACKUP_SEMANTICS);
# `filetime::set_file_mtime` does this correctly on every platform.
filetime = "0.2"
